In development.

* Added ck_ prefix to mutex_lock variable, to avoid name clash on Solaris.
  Solves bug #3472574 on SF.

* In autoconf, request system extensions to generate 64-bit safe code,
  solution from patch #2803433 on SF.

* Fix for mutex deadlock when killing threads, patch #3564640 on SF.

* Make XML output well-formed, solution from patch #3575642 on SF.
  Solves bug #3485651 also.

* Fix buggy duration calculation, bug #3575451 on SF. 

* A more complete CMake / MSVC patch for those interested in pursuing
  Windows development with Check and Visual Studio.  See
  patches/mloskot.windows.patch.

* Added instructions for improving the speed and output of `make
  check' when using Automake.  See contrib/improved_make_check/.

* Added a chapter in the documentation for selective running of tests.

* Changed how the message pipe is read. Before, the whole file was copied to
  RAM with realloc, giving problems with huge allocations for repetetive
  tests, the problem was visible for a specific GStreamer test case.

* Improvements to the new Check API: documentation, macros that allow
  multiple evaluation, unit tests, and new
  ck_assert_(str|int)_(lt|le|gt|ge) comparison functions.

* Made the new Check API primary and use it to define macros from old Check API

* Added checkmk, a tool for reducing "boilerplate coding" when writing
  unit tests with check.

* Added xslt link to xml output, added display of iteration field into xslt
  stylesheet and moved it to directory accessible from web page root

* Added longjmp to fail function to ensure that no code will be executed in test
  function after failed assertion

* Fix dead assignments and several possible NULL pointer dereferences

Tue, Sep 22, 2009: Released Check 0.9.8
  based on r559 (2009-09-23 21:00).

* Fix CHECK_MICRO_VERSION, left at 6 in 0.9.7 by mistake.

Tue, Sep 22, 2009: Released Check 0.9.7
  based on r552 (2009-09-22 09:26).
